--- a/typeface/typeface-about/index.html
+++ b/typeface/typeface-about/index.html
@@ -26,7 +26,7 @@
   
 <div class="container">
   <div id="header">
-  <a href="file:///Users/laurenfox/Desktop/typeface/typeface-homepage/index.html">← Back to Glyphs</a>
+  <a href="typeface/typeface-homepage/index.html">← Back to Glyphs</a>
 </div>
   
 <div id="text">
