--- a/typeface/typeface-specimen/index.html
+++ b/typeface/typeface-specimen/index.html
@@ -23,8 +23,8 @@
   
 <div id="cursor"></div>
   <div class="header">
-    <a href="https://lauren-fox.github.io/oswald/" id="specimen">Oswald Display</a>
-    <a href="https://lauren-fox.github.io/oswald/typeface/typeface-about/index.html" id="info">Learn More</a>
+    <a href="typeface/typeface-specimen/index.html" id="specimen">Oswald Display</a>
+    <a href="typeface/typeface-about-index.html" id="info">Learn More</a>
   </div>
   
 <!-- Content container  -->
