--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   
 <div id="cursor"></div>
   <div class="header">
-    <a href="typeface/typeface-specimen/index.html" id="specimen">Oswald Display</a>
-    <a href="typeface/typeface-about/index.html" id="info">Learn More</a>
+    <a href="specimen.html" id="specimen">Oswald Display</a>
+    <a href="about.html" id="info">Learn More</a>
   </div>
 	    
 
