--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="typeface/typeface-homepage/css/style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
 
 
   <!-- import the webpage's javascript file -->
-    <script src="typeface/typeface-homepage/js/script.js" defer></script>
+    <script src="./js/script.js" defer></script>
     
 </head>
   
