--- a/about.html
+++ b/about.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="about.js">
+    <link rel="stylesheet" href="./style/about.css">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
 
   <!-- import the webpage's javascript file -->
-    <script src="about.js" defer></script>
+    <script src="./js/about.js" defer></script>
 </head>
   
 <body>
