--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
 
   <!-- import the webpage's javascript file -->
-    <script src="/js/about.js" defer></script>
+    <script src="./js/about.js" defer></script>
 </head>
   
 <body>
