--- a/specimen.html
+++ b/specimen.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="specimen.css">
+    <link rel="stylesheet" href="./style/specimen.css">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
 
 
   <!-- import the webpage's javascript file -->
-    <script src="specimen.js" defer></script>
+    <script src="./js/specimen.js" defer></script>
 </head>
   
 <body>
