--- a/specimen.html
+++ b/specimen.html
@@ -23,8 +23,8 @@
   
 <div id="cursor"></div>
   <div class="header">
-    <a href="file:///Users/laurenfox/Desktop/typeface/typeface-homepage/index.html" id="specimen">Oswald Display</a>
-    <a href="file:///Users/laurenfox/Desktop/typeface/typeface-about/index.html" id="info">Learn More</a>
+    <a href="specimen.html" id="specimen">Oswald Display</a>
+    <a href="about.html" id="info">Learn More</a>
   </div>
   
 <!-- Content container  -->
