--- a/specimen.html
+++ b/specimen.html
@@ -23,7 +23,7 @@
   
 <div id="cursor"></div>
   <div class="header">
-    <a href="specimen.html" id="specimen">Oswald Display</a>
+    <a href="index.html" id="specimen">Oswald Display</a>
     <a href="about.html" id="info">Learn More</a>
   </div>
   
