--- a/about.html
+++ b/about.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="./style/about.css">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
 
-  <!-- import the webpage's javascript file -->
-    <script src="about.js" defer></script>
+    <script src="./js/about.js" defer></script>
 </head>
   
 <body>
