--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
   
 <body>
     <script type="text/javascript" src="https://code.jquery.com/jquery-latest.js"></script>
-    <script src="scripts/jGravity.js"></script>
+    <script src="./scripts/jGravity.js"></script>
   
   
 <div id="cursor"></div>
