--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
   
 <div id="text">
   <p>
-      Oswald is a modular typeface designed and built by Lauren Fox using HTML, CSS and JavaScript. Oswald is an interaction typeface so play around to see the letterforms transform. This project was completed in September 2019 in Form and Interaction at Washington University in St. Louis. Completed with help and motivation from Jonathan Hanahan and Christine Stravridis. The body copy is set in IBM Plex Mono designed by Mike Abbink at IBM.
+      Oswald is a modular typeface designed and built by Lauren Fox using HTML, CSS and JavaScript. Oswald is an interactive typeface so play around to see the letterforms transform. This project was completed in September 2019 in Form and Interaction at Washington University in St. Louis. Completed with help and motivation from Jonathan Hanahan and Christine Stravridis. The body copy is set in IBM Plex Mono designed by Mike Abbink at IBM.
   </p>
 </div>
     
