--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="style/style.css">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
 
 
   <!-- import the webpage's javascript file -->
-    <script src="./js/script.js" defer></script>
+    <script src="js/script.js" defer></script>
     
 </head>
   
@@ -25,10 +25,10 @@
   
   
 <div id="cursor"></div>
-  <div class="header">
-    <a href="specimen.html" id="specimen">Oswald Display</a>
-    <a href="about.html" id="info">Learn More</a>
-  </div>
+
+    <a href="specimen.html" id="specimen">Specimen</a>
+	<a href="about.html" id="info">Learn More</a>
+	<a href="index.html" id="header">Oswald</a>
 	    
 
   
