--- a/specimen.html
+++ b/specimen.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="./style/specimen.css">
+    <link rel="stylesheet" href="style/specimen.css">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
 
 
   <!-- import the webpage's javascript file -->
-    <script src="./js/specimen.js" defer></script>
+    <script src="js/script.js" defer></script>
 </head>
   
 <body>
@@ -22,11 +22,11 @@
   
   
 <div id="cursor"></div>
-  <div class="header">
-    <a href="index.html" id="specimen">Oswald Display</a>
-    <a href="about.html" id="info">Learn More</a>
-  </div>
-  
+<div id="header-container">
+    <a href="specimen.html" id="specimen">Specimen</a>
+	<a href="about.html" id="info">Learn More</a>
+	<a href="index.html" id="header">Oswald</a>
+</div>
 <!-- Content container  -->
   
 <div class="container">
