--- a/about.html
+++ b/about.html
@@ -5,10 +5,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <a class="ignore" href="specimen.html" id="specimen">Specimen</a>
+<div id="header">
+  <a class="ignore" href="specimen.html" id="specimen">Specimen</a>
 	<a class="ignore" href="about.html" id="info">Learn More</a>
-	<a class="ignore" href="index.html" id="title">Oswald</a>
+  <a class="ignore" href="index.html" id="title">Oswald</a>
+  </div>
 
   <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="style/about.css">
@@ -24,9 +25,8 @@
   
   
 <div class="ignore" id="cursor"></div>
-<div class="ignore" id="copy-container">
-<div class="ignore" id="body-copy">Oswald is a modular typeface designed and built by Lauren Fox using HTML, CSS and JavaScript. Oswald is an interaction typeface so play around to see the letterforms transform. This project was completed in September 2019 in Form and Interaction at Washington University in St. Louis. Completed with help and motivation from Jonathan Hanahan and Christine Stravridis. The body copy is set in Helvetica.</div>
-</div>
+  
+<p id="body-copy">Oswald is a modular typeface designed and built by Lauren Fox using HTML, CSS and JavaScript. Oswald is an interaction typeface so play around to see the letterforms transform. This project was completed in September 2019 in Form and Interaction at Washington University in St. Louis. Completed with help and motivation from Jonathan Hanahan and Christine Stravridis. The body copy is set in Helvetica.</p>
 
 <div class="inner-container">
 		<!-- A -->
