--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     <script src="scripts/jGravity.js"></script>
   
   
-    <svg id="cursor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 10"><defs><style>.cls-1{fill:#ff1038;}</style></defs><circle class="cls-1" cx="5" cy="5" r="5"/></svg>
+    <svg id="cursor" class="ignore" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 10"><defs><style>.cls-1{fill:#ff1038;}</style></defs><circle class="cls-1" cx="5" cy="5" r="5"/></svg>
   
 <p id="body-copy">Oswald is a modular typeface designed and built by Lauren Fox using HTML, CSS and JavaScript. Oswald is an interaction typeface so play around to see the letterforms transform. This project was completed in September 2019 in Form and Interaction at Washington University in St. Louis. Completed with help and motivation from Jonathan Hanahan and Christine Stravridis. The body copy is set in Helvetica.</p>
 
